dbus (1.2.14-3) UNRELEASED; urgency=low

  * debian/dbus.postinst
    - Suppress output from adduser.
  * debian/dbus.postrm
    - Cleanup /var/lib/dbus on purge.

 -- Michael Biebl <biebl@debian.org>  Wed, 17 Jun 2009 04:55:57 +0200

dbus (1.2.14-2) unstable; urgency=low

  * debian/dbus.postrm
    - Add missing whitespace before ']'.

 -- Michael Biebl <biebl@debian.org>  Fri, 08 May 2009 23:30:35 +0200

dbus (1.2.14-1) unstable; urgency=low

  * New upstream release.
  * Switch patch management system to quilt.
  * Refresh and update patches.
  * Remove debian/patches/20-dbus-alpha-unaligned.patch, fixed upstream.
  * debian/control
    - Drop dependency on debianutils as we no longer require run-parts.
    - Demote dbus-x11 from Recommends to Suggests. (Closes: #479341)
  * debian/libdbus-1-3.symbols
    - Update for API additions.
  * debian/rules
    - Bump shlibs to 1.2.14.
    - Add "-Wl,--as-needed" to LDFLAGS. This way we don't pick up any spurious
      X11 dependencies. (Closes: #499650)
  * debian/dbus.postinst
    - Remove chown call for /var/run/dbus as the init script will take care of
      setting the right permissions anyway. This also ensures that we don't
      fail if /var/run is on tmpfs. (Closes: #508931)
  * Bump Standards-Version to 3.8.1. No longer ship /var/run/dbus in the
    package but let the init script create it.
  * debian/dbus.install
    - Remove /var/run/dbus directory.
  * debian/dbus.postrm
    - Remove /var/run/dbus on purge.

 -- Michael Biebl <biebl@debian.org>  Fri, 08 May 2009 14:31:33 +0200

dbus (1.2.12-1) unstable; urgency=low

  [ Simon McVittie ]
  * New upstream release
  * Merge experimental into unstable
    - Changes in packaging relative to experimental: add myself to
      Uploaders, and suggest libdbus-1-dev instead of nonexistent dbus-1-dev

  [ Michael Biebl ]
  * Drop support for /etc/dbus-1/event.d. This interface has long been
    deprecated and all affected Debian packages have been fixed for lenny.