@@ -25,6 +25,12 @@ DEB_CONFIGURE_EXTRA_FLAGS += \
 
 DEB_DH_INSTALLINIT_ARGS := -r -- start 12 2 3 4 5 . stop  88 1 .
 
+ifneq (,$(filter $(DEB_HOST_ARCH), mips mipsel i386))
+common-configure-impl::
+	# workaround for a bug in binutils on mipsen (see #532821 and #528145)
+	sed -i -e 's/\-fPIE//' -e 's/\-pie\ \-Wl\,\-z\,relro//' bus/Makefile
+endif
+
 binary-post-install/dbus-x11::
 	mkdir -p debian/dbus-x11/etc/X11/Xsession.d
 	cp debian/dbus-Xsession debian/dbus-x11/etc/X11/Xsession.d/75dbus_dbus-launch
